# GeneSearch

./: .gitignore  Cargo.toml  README.md  bach.py  graph_execution_time.py  testing.py
.github/workflows/: rust.yml
resources/genomes/: rand-1000000.fa  rand-200000.fa  rand-400000.fa  rand-600000.fa  rand-800000.fa
results/: Result_2021-03-18T09.41.txt
scripts/: generate_genome.py  graph_execution_time.py  graph_experiments.py
src/: approx_search.rs  automated_testing.rs  exact_search.rs  main.rs  o_table.rs  sais.rs  skew.rs  suffix_array.rs  suffix_array_construction.rs  table_gen.rs  types.rs  util.rs
