[package]
name = "gene_search"
version = "0.1.0"
authors = ["Mikkel Erfurth Gaba <mikkelgaba@post.au.dk>", "Bastian Staunstrup <bastian@post.au.dk>", "Sergei Kirillov <201809454@post.au.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"