[package]
name = "gene_search"
version = "0.1.0"
authors = ["Mikkel Erfurth Gaba <mikkelgaba@post.au.dk>", "Bastian Staunstrup <bastian@post.au.dk>", "Sergei Kirillov <201809454@post.au.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
num = "0.4"
rand = "0.8.3"
bincode = "1.3.3"
seq_io = "0.3.1"

[profile.release]
debug = true